@@ -12,6 +12,12 @@
      [ssh-gss.h gss-serv.c gss-genr.c]
      relocate server-only GSSAPI code from libssh to server; bz #1225
      patch from simon AT sxw.org.uk; ok markus@ dtucker@
+   - djm@cvs.openbsd.org 2007/06/12 08:24:20
+     [scp.c]
+     make scp try to skip FIFOs rather than blocking when nothing is listening.
+     depends on the platform supporting sane O_NONBLOCK semantics for open
+     on FIFOs (apparently POSIX does not mandate this), which OpenBSD does.
+     bz #856; report by cjwatson AT debian.org; ok markus@
 
 20070611
  - (djm) Bugzilla #1306: silence spurious error messages from hang-on-exit
@@ -3026,4 +3032,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4691 2007/06/12 13:40:39 dtucker Exp $
+$Id: ChangeLog,v 1.4692 2007/06/12 13:41:06 dtucker Exp $
